refactor: styles in home and navbar

--- a/src/Style/stylehome.css
+++ b/src/Style/stylehome.css
@@ -1,177 +1,34 @@
-:root {
-  --style-font-famyli: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  --style-font-wheit: bold;
-  --style-font-size:25px;
-}
+
 
 * {
   padding: 0px;
   margin : 0px;
 }
 
-.Bodycont {
-  padding           : 40px;
-  display           : grid;
-  grid-template-rows: repeat(3, 1fr);
-}
-
-.Bodycontitle {
-  padding: 40px;
-
-  font-size      : 35px;
-  color          : rgba(17, 17, 17, 0.966);
-  display        : grid;
-  justify-content: center;
-  align-items    : center;
-  text-align     : center;
-  font-family    : var(--style-font-famyli);
-}
-
-.image-sub {
-  font-family: var(--style-font-famyli);
-  font-size  : 18px;
-  text-align: center;
-  font-weight: var(--style-font-wheit);
-  
-}
-
-.BodycontText {
-  width : 800px;
-  margin: 0 auto;
-
-
-  display        : grid;
-  text-align     : center;
-  justify-content: center;
-  align-items    : center;
-  align-content  : center;
-}
-
-.contenido {
-  font-family: var(--style-font-famyli);
-  font-size  : var(--style-font-size);
-
-  font-weight: var(--style-font-wheit);
-}
-
-.BodyButton {
-  font-weight    : bold;
-  display        : flex;
-  justify-content: center;
-
-}
-
-.ButtonFind {
-  color        : black;
-  background   : rgba(235, 233, 229, 0.753);
-  height       : 50px;
-  width        : 100px;
-  border-radius: 25px;
-  text-shadow  : 1px 1px #fff;
-  font-family  : var(--style-font-famyli);
-  font-size: 15px;
-}
-
-.ButtonFind:hover {
-  background: orange;
-  color     : #ffffff;
-}
-
-.image {
-  text-align: center;
-  width     : auto;
-
+header.masthead {
+  position: relative;
   overflow: hidden;
+  padding-top: calc(7rem + 72px);
+  padding-bottom: 7rem;
+  background: linear-gradient(0deg, #ff6a00 0%, #ee0979 100%) ;
+  background-image: url("../assets/img/pexels-béla-bleier-5892851.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: scroll;
+  background-size: cover;
 }
 
-.containerh1 {
-  padding-top   : 20px;
-  padding-bottom: 20px;
-  text-align    : center;
-  font-family   : var(--style-font-famyli);
-  font-size     : 30px;
-  font-weight   : bold;
-  margin: 20px;
+header.masthead .masthead-content {
+  z-index: 1;
+  position: relative;
 }
 
-.containeretiqueteP {
-  display        : flex;
-  justify-content: center;
+header.masthead .masthead-content .masthead-heading {
+  font-size: 4rem;
 }
 
-.containeretiquetePp {
-  font-size: var(--style-font-size);
-  font-family: var(--style-font-famyli);
-  font-weight: var(--style-font-wheit);
+header.masthead .masthead-content .masthead-subheading {
+  font-size: 2rem;
 }
 
-.containerimagesCarnes {
-  max-height: 600px;
-  margin: 20px;
-  display              : grid;
-  grid-template-columns: repeat(3, 1fr);
-  justify-items        : center;
-  align-items          : center;
-}
 
-.containerimagesCarnesip {
-  display: inline-grid;
-}
-
-.containerimagesCarnesipimg {
-  border      : 2px solid black;
-  margin-left : auto;
-  margin-right: auto;
-  height      : 270px;
-  width       : 280px;
-}
-
-.containerimagesCarnesipEp {
-  padding-top: 20px;
-  text-align : center;
-
-  line-height: 1.5em;
-  font-family: var(--style-font-famyli);
-  font-size  : 18px;
-  font-weight: bold;
-}
-
-.containerconctato {
-  margin-top: 20px;
-  height               : 200px;
-  padding-top          : 20px;
-  display              : grid;
-  grid-template-columns: 35% 35% 35%;
-  justify-items        : center;
-  align-items          : center;
-}
-
-.containerconctatologo {
-  display: inline-grid;
-}
-
-.containerconctatologoLp {
-  display       : list-item;
-  padding-top   : 20px;
-  padding-bottom: 20px;
-  text-align    : center;
-  font          : condensed 120% sans-serif;
-  line-height   : 1.5em;
-  font-family   : cursive;
-  font-size     : 18px;
-  font-weight   : bold;
-}
-
-.containerconctatologolog {
-  height: 60px;
-}
-
-.welcome {
-  font       : oblique bold 80px cursive;
-  font-size  : 60px;
-  color      : black;
-  font-weight: bold;
-  font-family: var(--style-font-famyli);
-
-}
